tests/baselines/reference/defaultArgsInOverloads.errors.txt
==== tests/cases/compiler/defaultArgsInOverloads.ts (5 errors) ====
    function fun(a: string);
    function fun(a = 3);
                 ~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.
    function fun(a = null) { }
    
    class C {
        fun(a: string);
        fun(a = 3);
         ~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.
        fun(a = null) { }
        static fun(a: string);
        static fun(a = 3);
                ~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.
        static fun(a = null) { }
    }
    
    interface I {
        fun(a: string);
        fun(a = 3);
            ~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.
    }
    
    var f: (a = 3) => number;
            ~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.